--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -4,3 +4,6 @@ distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStorePath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
+systemProp.sonar.host.url=http://localhost:9000
+#----- Token generated from an account with 'publish analysis' permission
+systemProp.sonar.login=<token>
